--- a/composer.json
+++ b/composer.json
@@ -19,15 +19,15 @@
     ],
     "require": {
         "php": ">=8.1",
-        "spatie/laravel-package-tools": "^1.14.0",
-        "illuminate/contracts": "^10.0",
+        "spatie/laravel-package-tools": ">=1.14.0",
+        "illuminate/contracts": ">=10.0",
         "spatie/laravel-query-builder": ">=5.6.0",
         "spatie/query-string": ">=1.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
-        "nunomaduro/collision": "^7.8",
-        "nunomaduro/larastan": "^2.0.1",
+        "nunomaduro/collision": ">=7.8",
+        "nunomaduro/larastan": ">=2.0.1",
         "orchestra/testbench": "^8.8",
         "pestphp/pest": "^2.20",
         "pestphp/pest-plugin-arch": "^2.0",
