--- a/composer.json
+++ b/composer.json
@@ -25,18 +25,18 @@
         "spatie/query-string": ">=1.0"
     },
     "require-dev": {
-        "laravel/pint": "^1.0",
+        "laravel/pint": ">=1.0",
         "nunomaduro/collision": ">=7.8",
         "nunomaduro/larastan": ">=2.0.1",
-        "orchestra/testbench": "^8.8",
-        "pestphp/pest": "^2.20",
-        "pestphp/pest-plugin-arch": "^2.0",
-        "pestphp/pest-plugin-laravel": "^2.0",
-        "phpstan/extension-installer": "^1.1",
-        "phpstan/phpstan": "^1.10",
-        "phpstan/phpstan-deprecation-rules": "^1.0",
-        "phpstan/phpstan-phpunit": "^1.0",
-        "spatie/laravel-ray": "^1.26"
+        "orchestra/testbench": ">=8.8",
+        "pestphp/pest": ">=2.20",
+        "pestphp/pest-plugin-arch": ">=2.0",
+        "pestphp/pest-plugin-laravel": ">=2.0",
+        "phpstan/extension-installer": ">=1.1",
+        "phpstan/phpstan": ">=1.10",
+        "phpstan/phpstan-deprecation-rules": ">=1.0",
+        "phpstan/phpstan-phpunit": ">=1.0",
+        "spatie/laravel-ray": ">=1.26"
     },
     "autoload": {
         "psr-4": {
